[sass] fix visible before from generic lists even with `.g-list0`

--- a/source/styles/generic/_list.scss
+++ b/source/styles/generic/_list.scss
@@ -45,6 +45,6 @@ ol {
   margin-bottom: 0;
 
   > li { text-indent: 0; }
-  > li:before { content: ''; }
+  > li:before { display: none; }
 
 }
